rm overflow:hidden on body element that was overriding all lower elements and causing display issues for featureblock modals

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,8 @@ body
 	background-color: #404041;
 	color: white;
 	font-weight: 200;
-	overflow: hidden;
+	/* This was causing problems clipping popup modal windows
+	overflow: hidden;*/
 }
 
 html, input[type="submit"] {
